--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -204,15 +204,17 @@
           else
             newUrl = urlSplit[0];
 
-          if (urlSplit[1].indexOf('invalid') == -1 && select != "all") {
-            if (urlSplit[1].indexOf('page') == -1)
-              newUrl = url + "&invalid=" + select;
-            else
-              newUrl = urlSplit[0]+'?'+ "invalid=" + select;
-          }
-          else {
+          if (diffParts.length > 1) {
             for (i = 0; i < diffParts.length; i++) {
-              if (diffParts[i].indexOf('invalid') == -1 && diffParts[i].indexOf('page') == -1) {
+              if(select == "all") {
+                if (diffParts[i].indexOf('invalid') == -1) {
+                  if (i != diffParts.length-1)
+                    newUrl += diffParts[i]+'&';
+                  else
+                    newUrl += diffParts[i];
+                }
+              }
+              else if (diffParts[i].indexOf('invalid') == -1 && diffParts[i].indexOf('page') == -1) {
                 if (i != diffParts.length-1)
                   newUrl += diffParts[i]+'&';
                 else
@@ -227,6 +229,8 @@
                 }
               }
             }
+            if (newUrl.indexOf('invalid') == -1 && select != "all")
+              newUrl += "&invalid="+select;
           }
         }
         else if (urlSplit[1].indexOf('invalid') > -1 && select != "all")
@@ -257,7 +261,7 @@
 
         window.location = newUrl;
       }
-    }); 
+    });  
 
     $(document).on("click", "a[name='sort-btn']", function (e) {
       select = document.getElementById('sorting').value;
