--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,12 +51,12 @@
               <div class="dropdown-menu"  style="position: absolute !important; top: 49px !important; right: -25px !important; min-width: 300px !important;">
                 <ul id="notification-scroll" class="notification-scroll">
                 <% if @notifications.size > 0 %>
-                    <% @notifications.reverse_each do |o| %>
-                        <li onclick="sendFromNotification('<%= o.title%>', '<%= o.oppty_id %>')" 
+                    <% @notifications.reverse_each do |n| %>
+                        <li onclick="sendFromNotification('<%= n.title%>', '<%= n.oppty_id %>', '<%= @notif_hash[n.oppty_id] %>')" 
                           class="notification-feed" style="padding-bottom: 15px !important; cursor: pointer;">
                           <a href="#">
-                            <p class="notify-title"><b><%=o.title%></b> <a class="notify-creation-date" style="float: right;"><%=o.created_at.to_date%></a><p>
-                            <p><%=o.message%></p>
+                            <p class="notify-title"><b><%=n.title%></b> <a class="notify-creation-date" style="float: right;"><%=n.created_at.to_date%></a><p>
+                            <p><%=n.message%></p>
                           </a>
                         </li>
                     <%end%>
@@ -111,11 +111,19 @@
         });
     });
 
-    function sendFromNotification(notify_title, oppty_id) {
+    function sendFromNotification(notify_title, oppty_id, isInOppties) {
         /* Redirect to different places depending on the notification title */
         if (notify_title == "RFP Date Changed") {
             console.log("RFP Date Changed");
-            window.location = "/oppties/" + oppty_id;
+            console.log("val: " + isInOppties);
+            if (isInOppties  == "true") {
+                console.log("inside");
+                window.location = "/oppties/" + oppty_id;
+            } 
+            else {
+                console.log("outside");
+                window.location = "/histories/" + oppty_id;
+            } 
         } else if (notify_title == "Opportunity Moved To History") {
             console.log("Opportunity Moved To History");
             window.location = "/histories/" + oppty_id;
