--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li id="username"><a>Welcome <%=session[:username] %></a></li>
             <li class="tab dropdown" style="max-height: 50px !important;">
-              <a onclick="resetNotification(<%= session[:user_id]%>,'<%=application_resetNotification_url%>')"
+              <a onclick="resetNotification('<%= session[:user_id]%>','<%=application_resetNotification_url%>')"
                  class="dropdown-toggle nav-notifications" data-toggle="dropdown" style="max-height: 50px !important;
                       padding-top: 10px !important;">
                 <img src="/assets/notif-bell-2.png" name="notificationIcon" height="35" width="35" style="padding-bottom: 4px;"
@@ -50,19 +50,24 @@
               </a>
               <div class="dropdown-menu"  style="position: absolute !important; top: 49px !important; right: -25px !important; min-width: 300px !important;">
                 <ul id="notification-scroll" class="notification-scroll">
-                <% if @notifications.size > 0 %>
-                    <% @notifications.reverse_each do |n| %>
-                        <li onclick="sendFromNotification('<%= n.title%>', '<%= n.oppty_id %>', '<%= @notif_hash[n.oppty_id] %>')" 
+                <% if @notif_array.size > 0 %>
+                    <% @notif_array.reverse_each do |n| %>
+                      <% if n.title == "RFP Date Changed" %>  
+                        <li onclick="sendFromNotification('<%= n.title%>', '<%= n.oppty_id %>')" 
                           class="notification-feed" style="padding-bottom: 15px !important; cursor: pointer;">
+                      <% else %>
+                        <li onclick="sendFromNotification('<%= n.title%>', '<%= n.history_id %>')" 
+                          class="notification-feed" style="padding-bottom: 15px !important; cursor: pointer;">
+                      <% end %>    
                           <a href="#">
                             <p class="notify-title"><b><%=n.title%></b> <a class="notify-creation-date" style="float: right;"><%=n.created_at.to_date%></a><p>
                             <p><%=n.message%></p>
                           </a>
-                        </li>
-                    <%end%>
-                <%else%>
+                        </li>   
+                    <% end %>
+                <% else %>
                     <li style="text-align: center; padding-left: 10px !important;">No Notifications</li>
-                <%end%>
+                <% end %>
               </ul>
               </div>
             </li>
@@ -111,22 +116,14 @@
         });
     });
 
-    function sendFromNotification(notify_title, oppty_id, isInOppties) {
+    function sendFromNotification(notify_title, id) {
         /* Redirect to different places depending on the notification title */
         if (notify_title == "RFP Date Changed") {
             console.log("RFP Date Changed");
-            console.log("val: " + isInOppties);
-            if (isInOppties  == "true") {
-                console.log("inside");
-                window.location = "/oppties/" + oppty_id;
-            } 
-            else {
-                console.log("outside");
-                window.location = "/histories/" + oppty_id;
-            } 
+            window.location = "/oppties/" + id;
         } else if (notify_title == "Opportunity Moved To History") {
             console.log("Opportunity Moved To History");
-            window.location = "/histories/" + oppty_id;
+            window.location = "/histories/" + id;
         } else if (notify_title == "Assigned To Task") {
             console.log("Assigned To Task");
             if (<%=session[:role] %> == "Writer") {
@@ -134,7 +131,7 @@
             } else {
               window.location = "/allocated_tasks/index";
             }
-        }    
+        }   
     }
 
     function resetNotification(user_id, path){
