style in edit and assign page

--- a/app/views/assign/index.html.erb
+++ b/app/views/assign/index.html.erb
@@ -2,7 +2,7 @@
 
 <body>
 	<div class="jumbotron container">
-		<h2 class="assign_name"><%= @oppty.opptyName%></h2>
+		<h2 class="assign_name" style="padding-top: 20px;"><%= @oppty.opptyName%></h2>
 
 		<div class="col-md-6">
           <h3>Not Assigned</h3>
