--- a/app/views/oppties/edit.html.erb
+++ b/app/views/oppties/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="jumbotron edit-bg">
-		<h2 style="text-align: center; padding-top: 20px; padding-bottom: 20px;">Edit <%= @oppty.opptyName %></h2>
+		<h2 style="text-align: center; padding-top: 20px; padding-bottom: 20px;"><%= @oppty.opptyName %></h2>
 
 		<%= render 'form' %>
 		
