--- a/app/views/histories/show.html.erb
+++ b/app/views/histories/show.html.erb
@@ -19,13 +19,15 @@
       <p><b>ED:</b> <%= @history.ed%></p>
       <p><b>ON:</b> <%= @history.on%></p>
       <p><b>ATE:</b> <%= @history.ate%></p>
-      <p><b>SL Comments:</b> <%= @history.slComments%></p>
+      <p class="comment-paragraph"><b>SL Comments:</b> <%= @history.slComments%></p>
       <p><b>SL Director:</b> <%= @history.slDir%></p>
       <p><b>Lead Estimator:</b> <%= @history.leadEstim%></p>
       <p><b>Engaged:</b> <%= @history.engaged%></p>
       <p><b>Solution:</b> <%= @history.solution%></p>
       <p><b>Estimate:</b> <%= @history.estimate%></p>
-      <a class="btn btn-lg btn-primary btn-left" href=<%=url_for(:back)%> role="button" style="color:white">Cancel</a>
+      <div class="btn-container">
+        <a class="btn btn-lg btn-primary btn-left oppty-btn" href=<%=url_for(:back)%> role="button" style="color:white">Cancel</a>
+      </div>
     </div>
   </div>
 </body>
