--- a/app/views/browse/index.html.erb
+++ b/app/views/browse/index.html.erb
@@ -10,11 +10,11 @@
               <%= form_tag(browse_index_path, :method => "get", id: "search-form") do %>
                 <%= text_field_tag :search, params[:search],
                                    placeholder: "Search Within Opportunity Name, ID, Code Name, or Customer Group",
-                                   id: 'opptyTextField',
-                                   onkeyup: "searchOppty()"%>
-                <input id="search-button" class="btn-search" type="image" style="width: 4% !important;" src="/assets/search.png" alt="Submit_tag"> 
-                <td class="col-md-1"></td>
+                                   id: 'opptyTextField'%>
               <% end %>
+                <input id="search-button" class="btn-search" type="image" style="width: 4% !important;" src="/assets/search.png" alt="Submit_tag" 
+                onclick="searchOppty()"> 
+                <td class="col-md-1"></td>
             </td>
           </tr>
         </table>
